# stratagem

./: .gitignore  LICENSE  architecture.html  launch  open-stratagem.command  pyproject.toml
.bookmark/: bookmark.context.md
app/: package-dmg.sh  project.yml
app/Stratagem/: StratagemApp.swift
app/Stratagem.xcodeproj/: project.pbxproj
app/Stratagem/Models/: AgentNode.swift  ResearchState.swift  ResearchThread.swift  SSEEvent.swift
app/Stratagem/Services/: BackendManager.swift  SSEClient.swift  SetupManager.swift  ThreadStore.swift
app/Stratagem/Theme/: Theme.swift
app/Stratagem/ViewModels/: FlowDiagramViewModel.swift  ResearchViewModel.swift
app/Stratagem/Views/: ContentArea.swift  FlowDiagramView.swift  MainView.swift  OutputView.swift  QueryInputView.swift  SetupView.swift  SidebarView.swift  ThreadRowView.swift
docs/: setup-mockup.html
docs/superpowers/plans/: 2026-03-15-agent-memory-system.md
docs/superpowers/specs/: 2026-03-15-agent-memory-system-design.md
plugin/: .mcp.json  plugin.json
plugin/agents/research-orchestrator/: AGENT.md
plugin/commands/: stratagem.md
plugin/skills/analyze-earnings/: SKILL.md
plugin/skills/extract-data/: SKILL.md
plugin/skills/financial-model/: SKILL.md
plugin/skills/flowchart/: SKILL.md
plugin/skills/research/: SKILL.md
src/stratagem/: __init__.py  __main__.py  agent.py  artifacts.py  memory.py  navgator.py  server.py  testing.py  threads.py  topics.py  tracing.py  ui.py
src/stratagem/frameworks/: __init__.py  content_design.md  pyramid_principle.md
src/stratagem/tools/: __init__.py  (+13 more)
tests/: conftest.py  test_artifacts.py  test_integration.py  test_live.py  test_memory.py  test_observation_tool.py  test_pdf.py  test_spreadsheet.py  test_spreadsheet_create.py  test_threads.py  test_topics.py  test_tracing.py  test_web.py
(+23 files in other folders)
